--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "build": "webpack --config ./build/webpack.build.config.js",
     "dev": "node build/server.js"
   },
-  "keywords": ["webpack","es6"],
+  "keywords": [
+    "webpack",
+    "es6"
+  ],
   "author": "doubleray.wang",
   "license": "ISC",
   "devDependencies": {
+    "animate.css": "^3.5.2",
     "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -22,6 +26,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.3",
     "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
     "ejs-loader": "^0.3.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
@@ -34,6 +39,7 @@
     "less-loader": "^4.0.5",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
