--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
     "img-loader": "^2.0.0",
+    "jquery.localscroll": "^2.0.0",
+    "jquery.scrollto": "^2.1.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "opn": "^5.1.0",
@@ -49,7 +51,8 @@
     "webpack": "^3.10.0",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "^4.1.1",
+    "wowjs": "^1.1.3"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
