--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "happypack": "^4.0.0",
+    "jquery": "^3.2.1",
+    "os": "^0.1.1"
   }
 }
